Fri Feb 11 20:25:00 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

      * include/makeinclude/platform_g++_common.GNU:
        Fixed cross compile

Fri Feb 11 11:16:00 UTC 2011  Martin Corino  <mcorino@remedy.nl>

        Merged changes from Remedy work branch.

        === start changelog ===

        Wed Feb  9 12:53:58 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

                * ace/CDR_Size.h:
                * ace/Lib_Find.h:
                * ace/Local_Name_Space_T.h:
                * ace/Lock.h:
                * ace/Message_Block.h:
                * ace/Name_Space.h:
                * ace/Naming_Context.h:
                  Doxygen changes

        Tue Feb  8 20:52:58 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

                * ace/ACE.cpp:
                  Removed support for deprecated VxWorks versions

                * ace/Active_Map_Manager.h:
                  Doxygen changes

        Tue Feb  8 20:47:58 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

                * include/makeinclude/platform_linux_icc.GNU:
                  Intel C++ 12 has support for visibility

                * include/makeinclude/rules.bin.GNU:
                * include/makeinclude/wrapper_macros.GNU:
                  Removed support for Chorus

        Tue Feb  8 20:44:58 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

                * ace/os_include/os_dirent.h:
                * ace/os_include/os_fcntl.h:
                * ace/os_include/os_limits.h:
                * ace/os_include/os_netdb.h:
                * ace/os_include/os_stdio.h:
                * ace/os_include/sys/os_time.h:
                  Removed support for deprecated VxWorks versions

        Tue Feb  8 19:14:58 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

                * examples/Reactor/Misc/notification.cpp:
                * examples/Reactor/Misc/pingpong.cpp:
                  Removed old support for chorus
