@@ -23,5 +23,4 @@ ACE_Lock_Adapter<ACE_LOCKING_MECHANISM>::ACE_Lock_Adapter (void)
            ACE_LOCKING_MECHANISM);
 }
 
-
 ACE_END_VERSIONED_NAMESPACE_DECL
